Fix button overfloww and Routing a bit

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,11 @@ body {
 
 }
 
+.header-brand-title a {
+  color:white;
+  text-decoration:none;
+}
+
 .header-sub-header {
   vertical-align: middle;
   color:white;
@@ -568,7 +573,7 @@ body {
   }
 
   .mp-author {
-    font-size:1.3em;
+    font-size:1em;
     text-align:center;
     text-transform:uppercase;
   }
@@ -593,6 +598,8 @@ body {
   .close-audio-button {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size:1em;
+    margin-left:1em;
+    margin-right:1em;
   }
 
   .audio-card-contents {
@@ -607,7 +614,7 @@ body {
   .mp-description {
     font-size:.9em;
     width:100%;
-    max-height:14em;
+    max-height:12em;
     overflow-y:auto;
   }
 
